Complete Lab 05 GUI submission